--- a/styles/blocks/desctop.css
+++ b/styles/blocks/desctop.css
@@ -23,7 +23,13 @@
     }
 
     .menu__top {
-        grid-column: 1/1;
+        display: none;
+    }
+
+    .menu__logo {
+        display:flex;
+        height: 40px;
+        width: auto;
     }
 
 
