--- a/styles/blocks/menu.css
+++ b/styles/blocks/menu.css
@@ -8,14 +8,14 @@
 }
 
 .icon--menu {
-    background-image: url("./../../images/icons/menu.png");
+    background-image: url("./../../images/icons/menu.svg");
 }
 .icon--menu:hover {
     background-color: #94A3B8;
 }
 
 .icon--close {
-    background-image: url("./../../images/icons/close.png");
+    background-image: url("./../../images/icons/close.svg");
 }
 
 .menu {
@@ -48,6 +48,7 @@
     --column: 4;
     grid-template-columns: repeat((--column), 1fr);
     height: 100%;
+    padding: 15px;
 }
 
 .menu__top {
@@ -58,8 +59,8 @@
 }
 
 .menu__logo {
-    height: 40px;
-    width: auto;
+display: none;
+
 }
 
 .menu__close {
