--- a/styles/blocks/hero.css
+++ b/styles/blocks/hero.css
@@ -16,7 +16,8 @@
     font-size: var(--font-size-normal);
     line-height: 1.6;
     color: var(--text-color);
-    margin-bottom: var(--spacing-lg);
+  margin-bottom: 16px;
+
   }
   
   .about-image {
