--- a/styles/index.css
+++ b/styles/index.css
@@ -9,7 +9,6 @@
 @import url(./blocks/services.css);
 @import url(./blocks/partners.css);
 @import url(./blocks/contact-card.css);
-@import url(./blocks/stats.css);
 @import url(./blocks/carousel.css);
 @import url(./blocks/hero.css);
 
@@ -36,6 +35,7 @@
     text-decoration: none;
     font-weight: 600;
     height: 48px;
+    width: 210px;
     text-align: center;
 }
 
@@ -60,4 +60,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;  
+}
+@media (max-width: 768px) {
+    .contact-btn {
+    width: auto;
+    }
+    .submit-button {
+        width: 100%;
+    }
 }
